Added profile API docs
